<resources>
    <string name="app_name">InstagramClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_desc">This is sample text for the description of this Instagram post, This image probably contains cool nature scenery</string>
    <string name="username_hint">Phone number,username, or email</string>
    <string name="password_hint">Password</string>
    <string name="fullname_hint">Full Name</string>
    <string name="username_only_hint">Username</string>
    <string name="login_text">Log in</string>
    <string name="sign_up_no_account_text">Don\'t have an account? Sign Up</string>
    <string name="forgot_details_text">"Forgot your login details? Get help logging in"</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="terms_conditions">By signing up, you agree to our Terms, Privacy Policy and Cookies Policy</string>
    <string name="sign_up_see_friends">Sign up to see photos and videos from your friends</string>
    <string name="have_an_account_login">Have an account? Login</string>
    <string name="view_comments_sample">View all 83 comments</string>
    <string name="post_time_sample">4 Hours ago</string>
    <string name="likes_text">likes</string>
    <string name="likes_count_text">2,426</string>
    <string name="your_note_text">Your Note</string>
    <string name="messages_text">Messages</string>
    <string name="requests_text">Requests</string>
    <string name="username_text">Username</string>
    <string name="sample_username">Full Name Text Here</string>
    <string name="sample_bio">Sample Bio Text</string>


    <string name="left_arrow">Navigate up</string>
    <string name="video_call">Video call</string>
    <string name="new_message">New message</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="plus_person_icon">Plus Person</string>
    <string name="grid_Icon">Grid Icon</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user_post">User Post </string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="addpost_logo">Add Post Logo</string>
    <string name="messenger_logo">Messenger Logo</string>
    <string name="bottombar_icon">Bottom Bar Icon</string>
    <string name="hambar_icon">Ham Bar Icon</string>
    <string name="vertical_ellipsis">Vertical Ellipsis</string>
    <string name="story_border_icon">Story Border Icon</string>
    <string name="profile_image">Profile Image</string>
    <string name="camera_outline">Camera Outline</string>

</resources>