...
        loginActivityBinding.tvSignUp.setOnClickListener() {
            navController.navigate(R.id.action_loginFragment_to_signupFragment)
        }

        loginActivityBinding.BtLogin.setOnClickListener() {
            val email = loginActivityBinding.EtUsername.text.toString()
            val password = loginActivityBinding.EtPassword.text.toString()
            loginViewModel.loginUser(email, password)
        }
        lifecycleScope.launch {
            loginViewModel.userLoggedIn.collect { isLoggedin ->
                if (isLoggedin) {
                    navController.popBackStack()
...
